should fix scrollbar issue

--- a/src/internal/exploring/exploring.css
+++ b/src/internal/exploring/exploring.css
@@ -12,20 +12,22 @@
 
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: arial, sans;
 }
 
-body {
-  width: 100%;
+main {
+  /* to ensure page loader takes the whole height */
+  position: relative;
 }
 
-main {
-  width: 100%;
-  min-height: 100%; /* to ensure page loader takes the whole height */
-  position: relative;
+main #page {
+  min-height: calc(100vh - 40px);
+}
+
+main #page > * {
+  min-height: calc(100vh - 40px);
 }
 
 #page-loader {
@@ -79,7 +81,6 @@ html[data-toolbar-visible] {
 main iframe {
   border: none;
   width: 100%;
-  height: 100%;
 }
 
 aside button:focus,
